fix gap

--- a/style.css
+++ b/style.css
@@ -31,13 +31,13 @@ body {
 
 .grid {
   display: grid;
-  column-gap: 15.4rem;
-  row-gap: 2.6rem;
+  column-gap: 10rem;
+  row-gap: 1.6rem;
 }
 
 .container {
   max-width: 120rem;
-  padding: 0 8rem;
+  padding: 0 12rem;
   margin: 0px auto;
   text-align: center;
 }
